Change to Java 1.4 regexp and Boolean.valueOf().
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@940 37aeb1de-b14b-0410-9a0e-82b28170d228